--- a/src-test/doms/fail_element_padding.html
+++ b/src-test/doms/fail_element_padding.html
@@ -6,20 +6,15 @@
         <!--[if IE]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
-		<link rel="stylesheet" href="/css/reset.css" type="text/css" media="screen" title="no title" charset="utf-8">
-		<link rel="stylesheet" href="/css/typography.css" type="text/css" media="screen" title="no title" charset="utf-8">
-		<link rel="stylesheet" href="/css/primer.css" type="text/css" media="screen" title="no title" charset="utf-8">
+		<link rel="stylesheet" href="../css/reset.css" type="text/css" media="screen" title="no title" charset="utf-8">
+		<link rel="stylesheet" href="../css/typography.css" type="text/css" media="screen" title="no title" charset="utf-8">
+		<link rel="stylesheet" href="../css/primer.css" type="text/css" media="screen" title="no title" charset="utf-8">
 		<script type="text/javascript" src="/src/jquery.1.4.2.js" charset="utf-8"></script>
 		<script type="text/javascript" src="/src/primer.js" charset="utf-8"></script>
 		<script type="text/javascript" src="/src/primer_style.js" charset="utf-8"></script>
 		<script type="text/javascript" src="/src/arrhythmia.js" charset="utf-8"></script>
 		
-		<script type="text/javascript" charset="utf-8">
-			$(function() {
-				var valid = Arrhythmia("body").validateRhythm() === false;
-				if(window.opener) window.opener.test_callback(window, valid, "foo");
-			});
-		</script>
+		<script type="text/javascript" src="../dom_test_client.js"charset="utf-8"></script>
 </head>
 <body>
 	<h1 class="center">Lorem Ipsum</h1>
