--- a/src-test/doms/fail_element_margin.html
+++ b/src-test/doms/fail_element_margin.html
@@ -8,10 +8,8 @@
         <![endif]-->
 		<link rel="stylesheet" href="../css/reset.css" type="text/css" media="screen" title="no title" charset="utf-8">
 		<link rel="stylesheet" href="../css/typography.css" type="text/css" media="screen" title="no title" charset="utf-8">
-		<link rel="stylesheet" href="../css/primer.css" type="text/css" media="screen" title="no title" charset="utf-8">
+		<link rel="stylesheet" href="../css/base.css" type="text/css" media="screen" title="no title" charset="utf-8">
 		<script type="text/javascript" src="/src/jquery.1.4.2.js" charset="utf-8"></script>
-		<script type="text/javascript" src="/src/primer.js" charset="utf-8"></script>
-		<script type="text/javascript" src="/src/primer_style.js" charset="utf-8"></script>
 		<script type="text/javascript" src="/src/arrhythmia.js" charset="utf-8"></script>
 		
         <script type="text/javascript" src="../dom_test_client.js"charset="utf-8"></script>
