Adding test case for invalid element with valid children

--- a/src-test/doms/fail_element_with_children.html
+++ b/src-test/doms/fail_element_with_children.html
@@ -14,7 +14,7 @@
 		
         <script type="text/javascript" src="../dom_test_client.js"charset="utf-8"></script>
 </head>
-<body class="debug">
+<body>
 	<h1 class="center">Lorem Ipsum</h1>
 	<article style="margin:0 auto;">
 		<section id="introduction">
