--- a/src-test/doms/fail_element_with_children.html
+++ b/src-test/doms/fail_element_with_children.html
@@ -9,8 +9,8 @@
 		<link rel="stylesheet" href="../css/reset.css" type="text/css" media="screen" title="no title" charset="utf-8">
 		<link rel="stylesheet" href="../css/typography.css" type="text/css" media="screen" title="no title" charset="utf-8">
 		<link rel="stylesheet" href="../css/base.css" type="text/css" media="screen" title="no title" charset="utf-8">
-		<script type="text/javascript" src="/src/jquery.1.4.2.js" charset="utf-8"></script>
-		<script type="text/javascript" src="/src/arrhythmia.js" charset="utf-8"></script>
+		<script type="text/javascript" src="../../src/jquery.1.4.2.js" charset="utf-8"></script>
+		<script type="text/javascript" src="../../src/arrhythmia.js" charset="utf-8"></script>
 		
         <script type="text/javascript" src="../dom_test_client.js"charset="utf-8"></script>
 </head>
