--- a/src-test/runner.html
+++ b/src-test/runner.html
@@ -21,7 +21,7 @@
                     if(results[test]) { 
                         html.push("<span class='success'>Success</span>");
                     } else { 
-                        html.push("<span class='failure'>Failusre</span>");
+                        html.push("<span class='failure'>Failure</span>");
                     }
                     html.push("</li>");
                     list.append(html.join(""));
